# syla-execution-service

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs
proto/: common  execution.proto  google
src/: docker.rs  error.rs  executor.rs  main.rs  models.rs  queue.rs  state.rs  worker.rs
src/grpc/: mod.rs  server.rs
